Main changes: add footer & pseudo-elements to header, nav. Rework font-sizes.

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 /* img becomes no larger than actual size. */
@@ -23,21 +24,63 @@ img {
 header {
     width: 90%;
     margin: 0;
-    padding: 0.5em 5%;
+    padding: 0 5%;
     background: #bd1303; /* vibrant red */
     flex: initial; /* flex: 0 1 auto */
+    position: relative;
+}
+
+header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    left: 100%;
+    background: #bd1303; /* vibrant red */
+}
+
+header::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    right: 100%;
+    background: #bd1303; /* vibrant red */
 }
 
 nav {
     width: 90%;
     margin: 0;
-    padding: 0.5em 5%;
+    padding: 0.25em 5%;
     background: #001b3d; /* dark blue */
     flex: initial; /* flex: 0 1 auto */
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between; /* main axis */
     align-items: center; /* cross axis */
+    position: relative;
+}
+
+nav::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    left: 100%;
+    background: #001b3d; /* dark blue */
+}
+
+nav::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    right: 100%;
+    background: #001b3d; /* dark blue */
 }
 
 /* Classes for figure */
@@ -101,7 +144,7 @@ figcaption {
 
 @media all and (min-width: 400px) {
     figcaption {
-        font-size: 1em; /* 16px */
+        font-size: 0.9375em; /* 15px */
         margin-right: 0;
         margin-left: 0;
     }
@@ -109,13 +152,13 @@ figcaption {
 
 @media all and (min-width: 500px) {
     figcaption {
-        font-size: 1.0625em; /* 17px */
+        font-size: 1em; /* 16px */
     }
 }
 
 @media all and (min-width: 600px) {
     figcaption {
-        font-size: 1.125em; /* 18px */
+        font-size: 1.0625em; /* 17px */
     }
 }
 
@@ -174,15 +217,18 @@ section {
 }
 
 .page-title {
-    border-top: 2px solid #424242; /* grey 800 */
+    width: 90%;
+    margin: 0 5%;
+    padding: 0.5em 0;
     border-bottom: 2px solid #424242; /* grey 800 */
+    flex: initial; /* flex: 0 1 auto */
 }
 
 .filters {
     margin: 0;
     padding: 0 5%;
     background: #fafafa; /* very light grey */
-    flex: initial;
+    flex: initial; /* flex: 0 1 auto */
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start; /* main axis */
@@ -197,13 +243,33 @@ section {
     border-bottom: none;
 }
 
-/* no footer yet */
 footer {
     width: 90%;
     margin: 0;
-    padding: 1em 5%;
-    background: #010b40; /* very dark blue */
+    padding: 0 5%;
+    background: #001b3d; /* dark blue */
     flex: initial; /* flex: 0 1 auto */
+    position: relative;
+}
+
+footer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    left: 100%;
+    background: #001b3d; /* dark blue */
+}
+
+footer::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    right: 100%;
+    background: #001b3d; /* dark blue */
 }
 
 /* TRANSITIONS ARE BELOW */
@@ -226,14 +292,19 @@ p {
     font-weight: 400;
 }
 
-.filters p {
+.filter-txt {
     line-height: 1.2;
+    color: #46464f; /* subtle dark blue */
+}
+
+.light-txt {
+    color: #fff;
 }
 
 h1 {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.2;
-    font-weight: 700;
+    font-weight: 600;
 }
 
 h2 {
@@ -266,11 +337,7 @@ dd {
 .nav-link {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.8;
-    font-weight: 600;
-}
-
-.common-link {
-    color: #46464f; /* subtle dark blue */
+    font-weight: 500;
 }
 
 h1 a {
@@ -279,7 +346,7 @@ h1 a {
 }
 
 .nav-link a {
-    color: #fff; /* white */
+    color: #fff;
     text-decoration: none;
 }
 
@@ -292,14 +359,16 @@ h1 a:hover {
     text-decoration: none;
 }
 
-.common-link:hover {
+.filter-txt:hover {
     cursor: pointer;
     text-decoration: none;
 }
 
 /* FONTS MEDIA QUERIES ARE BELOW */
 @media all and (min-width: 300px) {
-    p {
+    p,
+    dt,
+    dd {
         font-size: 0.875em; /* 14px */
     }
 
@@ -315,36 +384,28 @@ h1 a:hover {
         font-size: 0.875em; /* 14px */
     }
 
-    dt,
-    dd {
-        font-size: 0.875em; /* 14px */
-    }
-
     .nav-link {
-        font-size: 0.6875em;  /* 11 px */
+        font-size: 0.6875em; /* 11px */
     }
 }
 
 @media all and (min-width: 400px) {
-    p {
-        font-size: 1em; /* 16px */
+    p,
+    dt,
+    dd {
+        font-size: 0.9375em; /* 15px */
     }
 
     h1 {
-        font-size: 1.125em; /* 18px */
-    }
-
-    h2 {
         font-size: 1.0625em; /* 17px */
     }
 
-    h3 {
+    h2 {
         font-size: 1em; /* 16px */
     }
 
-    dt,
-    dd {
-        font-size: 1em; /* 16px */
+    h3 {
+        font-size: 0.9375em; /* 15px */
     }
 
     .nav-link {
@@ -353,55 +414,49 @@ h1 a:hover {
 }
 
 @media all and (min-width: 500px) {
-    p {
-        font-size: 1.0625em; /* 17px */
+    p,
+    dt,
+    dd {
+        font-size: 1em; /* 16px */
     }
 
     h1 {
-        font-size: 1.25em; /* 20px */
-    }
-
-    h2 {
-        font-size: 1.1875em; /* 19px */
-    }
-
-    h3 {
         font-size: 1.125em; /* 18px */
     }
 
-    dt,
-    dd {
+    h2 {
         font-size: 1.0625em; /* 17px */
     }
 
+    h3 {
+        font-size: 1em; /* 16px */
+    }
+
     .nav-link {
-        font-size: 0.9375em; /* 15 px */
+        font-size: 0.875em; /* 14px */
     }
 }
 
 @media all and (min-width: 600px) {
-    p {
-        font-size: 1.125em; /* 18px */
+    p,
+    dt,
+    dd {
+        font-size: 1.0625em; /* 17px */
     }
 
     h1 {
-        font-size: 1.375em; /* 22px */
+        font-size: 1.1875em; /* 19px */
     }
 
     h2 {
-        font-size: 1.3125em; /* 21px */
-    }
-
-    h3 {
-        font-size: 1.25em; /* 20px */
-    }
-
-    dt,
-    dd {
         font-size: 1.125em; /* 18px */
     }
 
+    h3 {
+        font-size: 1.0625em; /* 17px */
+    }
+
     .nav-link {
-        font-size: 1.0625em; /* 17 px */
+        font-size: 0.9375em; /* 15px */
     }
 }
