Modify footer and its class 'light-txt'.

--- a/src/style.css
+++ b/src/style.css
@@ -249,13 +249,15 @@ footer {
     padding: 0 5%;
     background: #001b3d; /* dark blue */
     flex: initial; /* flex: 0 1 auto */
-    position: relative;
+    position: sticky;
+    bottom: 0;
+    left: 0;
 }
 
 footer::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: -1px;
     bottom: 0;
     width: 2000px;
     left: 100%;
@@ -265,7 +267,7 @@ footer::before {
 footer::after {
     content: "";
     position: absolute;
-    top: 0;
+    top: -1px;
     bottom: 0;
     width: 2000px;
     right: 100%;
@@ -292,12 +294,15 @@ p {
     font-weight: 400;
 }
 
+/* Used in Neighborhood, Postal Code filters */
 .filter-txt {
     line-height: 1.2;
     color: #46464f; /* subtle dark blue */
 }
 
+/* Used in footer */
 .light-txt {
+    line-height: 1.2;
     color: #fff;
 }
 
