--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ img {
     width: 100%;
     max-width: 600px;
     margin: 0 auto;
-    padding: 0;
+    padding-bottom: 2.6em;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start; /* main axis */
