--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
 #container {
-    width: 100%;
-    height: 100vh;
+    width: 90%;
+    height: 90vh;
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 5%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
@@ -12,37 +12,39 @@
 }
 
 header {
-    width: 90%;
-    max-width: 800px;
+    width: 100%;
     margin: 0;
-    padding: 0 5%;
+    padding: 0;
     flex: initial;
 }
 
 /* Map styles */
 .map-container {
     width: 100%;
+    margin: 0;
+    padding: 0;
     flex: 1;
+}
+
+section {
+    width: 100%;
+    max-width: 700px;
+    margin: 0;
+    padding: 0;
+    flex: initial;
 }
 
 /* Font styles and their media queries */
 h1 {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.5;
-    font-weight: 500;
-    color: #191c1e;
-}
-
-h2 {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 500;
+    font-weight: 600;
     color: #191c1e;
 }
 
 p {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    line-height: 1.5;
+    line-height: 1.6;
     font-weight: 400;
     color: #191c1e;
 }
@@ -56,10 +58,6 @@ p {
     h1 {
         font-size: 1.125em; /* 18 px */
     }
-
-    h2 {
-        font-size: 1em; /* 16px */
-    }
 }
 
 @media (min-width: 400px) and (max-width: 499px) {
@@ -69,10 +67,6 @@ p {
 
     h1 {
         font-size: 1.1875em; /* 19px */
-    }
-
-    h2 {
-        font-size: 1.0625em; /* 17px */
     }
 }
 
@@ -84,10 +78,6 @@ p {
     h1 {
         font-size: 1.25em; /* 20px */
     }
-
-    h2 {
-        font-size: 1.125em; /* 18 px */
-    }
 }
 
 @media (min-width: 600px) {
@@ -97,9 +87,5 @@ p {
 
     h1 {
         font-size: 1.3125em; /* 21px */
-    }
-
-    h2 {
-        font-size: 1.1875em; /* 19px */
     }
 }
