--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body {
 
 #container {
     width: 90%;
-    height: 90vh;
+    height: 100vh;
     max-width: 1280px;
     margin: 0 auto;
     padding: 0 5%;
@@ -34,7 +34,7 @@ section {
     width: 100%;
     max-width: 700px;
     margin: 0;
-    padding: 0;
+    padding-bottom: 1em;
     flex: initial;
 }
 
