--- a/src/style.css
+++ b/src/style.css
@@ -3,14 +3,22 @@ body {
     background: #fdfcff;
 }
 
+#app {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start; /* main axis */
+    align-items: center; /* cross axis */
+}
+
 #container {
     width: 90%;
-    height: 100vh;
     max-width: 1280px;
     margin: 0 auto;
     padding: 0 5%;
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row wrap;
     justify-content: flex-start;
     align-items: flex-start;
 }
@@ -25,9 +33,10 @@ header {
 /* Map styles */
 .map-container {
     width: 100%;
+    min-height: 70vh;
     margin: 0;
     padding: 0;
-    flex: 1;
+    flex: initial;
 }
 
 section {
@@ -55,12 +64,12 @@ p {
 
 /* Media queries for fonts */
 @media (min-width: 300px) and (max-width: 399px) {
-    p {
-        font-size: 0.875em; /* 14px */
+    p  {
+        font-size: 0.8125em; /* 13px */
     }
 
     h1 {
-        font-size: 1.125em; /* 18 px */
+        font-size: 0.9375em; /* 15px */
     }
 }
 
@@ -70,23 +79,23 @@ p {
     }
 
     h1 {
-        font-size: 1.1875em; /* 19px */
+        font-size: 1.0625em; /* 17px */
     }
 }
 
 @media (min-width: 500px) and (max-width: 599px) {
     p {
-        font-size: 1em; /* 16px */
+        font-size: 1.0625em; /* 17px */
     }
 
     h1 {
-        font-size: 1.25em; /* 20px */
+        font-size: 1.1875em; /* 19px */
     }
 }
 
 @media (min-width: 600px) {
     p {
-        font-size: 1.0625em; /* 17px */
+        font-size: 1.1875em; /* 19px */
     }
 
     h1 {
