--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,29 @@
 /* Stylesheet uses Level 3 Media Queries. Level 4 coverage still spotty. */
 body {
     background: #fdfcff;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 
 #app {
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start; /* main axis */
-    align-items: center; /* cross axis */
+    align-items: flex-start; /* cross axis */
 }
 
 #container {
-    width: 90%;
+    width: 100%;
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0 5%;
+    padding: 0;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
@@ -24,81 +31,473 @@ body {
 }
 
 header {
-    width: 100%;
+    width: 90%;
+    margin: 0;
+    padding: 0 5%;
+    background: #000;
+    flex: initial;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around; /* main axis */
+    align-items: center; /* cross axis */
+    position: relative;
+}
+
+header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    left: 100%;
+    background: #000;
+}
+
+header::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    right: 100%;
+    background: #000;
+}
+
+.items-left {
+    margin: 0;
+    padding: 0;
+    flex: initial;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.items-right {
+    margin: 0;
+    padding: 0;
+    flex: initial;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+@media (min-width: 300px) and (max-width: 539px) {
+    .items-left {
+        width: 100%;
+        justify-content: flex-start; /* main axis */
+        align-items: center; /* cross axis */
+    }
+
+    .items-right {
+        width: 100%;
+        justify-content: flex-start; /* main axis */
+        align-items: center; /* cross axis */
+    }
+
+}
+
+@media (min-width: 540px) {
+    .items-left {
+        width: 50%;
+        justify-content: flex-start; /* main axis */
+        align-items: center; /* cross axis */
+    }
+
+    .items-right {
+        width: 50%;
+        justify-content: flex-end; /* main axis */
+        align-items: center; /* cross axis */
+    }
+}
+
+.header-text {
     margin: 0;
     padding: 0;
     flex: initial;
 }
 
-/* Map styles */
-.map-container {
-    width: 100%;
-    min-height: 70vh;
+figure.logo-header {
+    width: 50px;
     margin: 0;
-    padding: 0;
+    padding-top: 2px;
     flex: initial;
+}
+
+.ribbon {
+    width: 90%;
+    margin: 0;
+    padding: 0 5%;
+    background: #cc0000;
+    flex: initial;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start; /* main axis */
+    align-items: center; /* cross axis */
+    position: relative;
+}
+
+.ribbon::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    left: 100%;
+    background: #cc0000;
+}
+
+.ribbon::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    right: 100%;
+    background: #cc0000;
 }
 
 section {
-    width: 100%;
-    max-width: 700px;
+    width: 90%;
     margin: 0;
-    padding-bottom: 1em;
+    padding: 0 5%;
+    flex: initial;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between; /* main axis */
+    align-items: center; /* cross axis */
+}
+
+.callout {
+    width: 65%;
+    margin: 0;
+    padding: 0;
     flex: initial;
 }
 
-/* Font styles and their media queries */
-h1 {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 600;
-    color: #1a1c1e;
-}
-
-p {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    line-height: 1.6;
-    font-weight: 400;
-    color: #1a1c1e;
-}
-
-/* Media queries for fonts */
-@media (min-width: 300px) and (max-width: 399px) {
-    p  {
-        font-size: 0.8125em; /* 13px */
-    }
-
-    h1 {
-        font-size: 0.9375em; /* 15px */
+@media (min-width: 300px) and (max-width: 599px) {
+    .callout {
+        width: 65%;
     }
 }
 
-@media (min-width: 400px) and (max-width: 499px) {
-    p {
-        font-size: 0.9375em; /* 15px */
+@media (min-width: 600px) and (max-width: 899px) {
+    .callout {
+        width: 75%;
     }
+}
 
-    h1 {
-        font-size: 1.0625em; /* 17px */
+@media (min-width: 900px) {
+    .callout {
+        width: 60%;
+    }
+}
+
+figure.logo-callout {
+    margin: 0;
+    padding: 0;
+    flex: initial;
+}
+
+@media (min-width: 300px) and (max-width: 499px) {
+    figure.logo-callout {
+        width: 30%;
     }
 }
 
 @media (min-width: 500px) and (max-width: 599px) {
-    p {
-        font-size: 1.0625em; /* 17px */
+    figure.logo-callout {
+        width: 25%;
     }
+}
 
-    h1 {
-        font-size: 1.1875em; /* 19px */
+@media (min-width: 600px) and (max-width: 699px) {
+    figure.logo-callout {
+        width: 20%;
+    }
+}
+
+@media (min-width: 700px) and (max-width: 999px) {
+    figure.logo-callout {
+        width: 15%;
+    }
+}
+
+@media (min-width: 1000px) {
+    figure.logo-callout {
+        width: 10%;
+    }
+}
+
+footer {
+    width: 90%;
+    margin: 0;
+    padding: 2em 5%;
+    background: #000;
+    flex: initial;
+    display: flex;
+    flex-flow: row wrap;
+    position: relative;
+}
+
+footer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    left: 100%;
+    background: #000;
+}
+
+footer::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 2000px;
+    right: 100%;
+    background: #000;
+}
+
+@media (min-width: 300px) and (max-width: 499px) {
+    footer {
+        justify-content: flex-start; /* main axis */
+        align-items: center; /* cross axis */
+    }
+}
+
+@media (min-width: 500px) {
+    footer {
+        justify-content: space-between; /* main axis */
+        align-items: center; /* cross axis */
+    }
+}
+
+ul {
+    padding: 0;
+    list-style: none;
+}
+
+@media (min-width: 300px) and (max-width: 499px) {
+    ul {
+        width: 100%;
+        margin-bottom: 1em;
+    }
+}
+
+@media (min-width: 500px) {
+    ul {
+        width: 80%;
+        margin-bottom: 0;
+    }
+}
+
+figure.logo-footer {
+    margin: 0;
+    padding: 0;
+}
+
+@media (min-width: 300px) and (max-width: 399px) {
+    figure.logo-footer {
+        width: 25%;
+    }
+}
+
+@media (min-width: 400px) and (max-width: 499px) {
+    figure.logo-footer {
+        width: 20%
+    }
+}
+
+@media (min-width: 500px) and (max-width: 599px) {
+    figure.logo-footer {
+        width: 15%;
     }
 }
 
 @media (min-width: 600px) {
-    p {
+    figure.logo-footer {
+        width: 10%;
+    }
+}
+
+dl {
+    margin: 0;
+    padding: 0;
+}
+
+/* Font styles and their media queries */
+p {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.6;
+    font-weight: 400;
+    margin-top: 0;
+    color: #1a1c1e;
+}
+
+h1  {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 600;
+    color: #fff;
+}
+
+h1 a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.pipe {
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 600;
+    color: #fff;
+}
+
+.header-text {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 500;
+    color: #fff;
+}
+
+.header-text a {
+    color: #fff;
+    text-decoration: none;
+}
+
+h2 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 600;
+    color: #fff;
+}
+
+h3 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 600;
+    margin-bottom: 0.5em;
+    color: #1a1c1e;
+}
+
+h4 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 500;
+    color: #1a1c1e;
+}
+
+li {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.6;
+    font-weight: 500;
+    color: #fff;
+}
+
+/* Map styles */
+.map-container {
+    width: 90%;
+    min-height: 70vh;
+    margin: 2em 5%;
+    padding: 0;
+    flex: initial;
+}
+
+dd {
+    margin-left: 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.6;
+    font-weight: 400;
+    color: #1e1c00;
+}
+
+
+/* Media queries for fonts */
+@media (min-width: 300px) and (max-width: 399px) {
+    p, li, dd  {
+        font-size: 0.8125em; /* 13px */
+    }
+
+    h1, .pipe, .header-text {
+        font-size: 0.75em; /* 12px */
+    }
+
+    h2 {
         font-size: 1.1875em; /* 19px */
     }
 
-    h1 {
+    h3 {
+        font-size: 1.0625em; /* 17px */
+    }
+
+    h4 {
+         font-size: 0.75em; /* 12px */
+    }
+}
+
+@media (min-width: 400px) and (max-width: 499px) {
+    p, li, dd  {
+        font-size: 0.9375em; /* 15px */
+    }
+
+    h1, .pipe, .header-text {
+        font-size: 0.8125em; /* 13px */
+    }
+
+    h2 {
+        font-size: 1.25em; /* 20px */
+    }
+
+    h3 {
+        font-size: 1.125em; /* 18 px */
+    }
+
+    h4 {
+        font-size: 0.875em; /* 14px */
+    }
+}
+
+@media (min-width: 500px) and (max-width: 599px) {
+    p, li, dd  {
+        font-size: 1.0625em; /* 17px */
+    }
+
+    h1, .pipe, .header-text {
+        font-size: 0.875em; /* 14px */
+    }
+
+    h2 {
         font-size: 1.3125em; /* 21px */
+    }
+
+    h3 {
+        font-size: 1.1875em; /* 19px */
+    }
+
+    h4 {
+        font-size: 1em; /* 16px */
+    }
+}
+
+@media (min-width: 600px) {
+    p, li, dd  {
+        font-size: 1.1875em; /* 19px */
+    }
+
+    h1, .pipe, .header-text {
+        font-size: 0.9375em; /* 15px */
+    }
+
+    h2 {
+        font-size: 1.375em; /* 22px */
+    }
+
+    h3 {
+        font-size: 1.25em; /* 20px */
+    }
+
+    h4 {
+        font-size: 1.125em; /* 18 px */
     }
 }
