--- a/src/style.css
+++ b/src/style.css
@@ -11,14 +11,6 @@ img {
     display: block;
 }
 
-#app {
-    width: 100%;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start; /* main axis */
-    align-items: flex-start; /* cross axis */
-}
-
 #container {
     width: 100%;
     max-width: 1280px;
@@ -91,7 +83,6 @@ header::after {
         justify-content: flex-start; /* main axis */
         align-items: center; /* cross axis */
     }
-
 }
 
 @media (min-width: 540px) {
@@ -108,12 +99,6 @@ header::after {
     }
 }
 
-.header-text {
-    margin: 0;
-    padding: 0;
-    flex: initial;
-}
-
 figure.logo-header {
     width: 50px;
     margin: 0;
@@ -125,7 +110,7 @@ figure.logo-header {
     width: 90%;
     margin: 0;
     padding: 0 5%;
-    background: #cc0000;
+    background: #c00; /* longhand #cc0000 */
     flex: initial;
     display: flex;
     flex-flow: row wrap;
@@ -141,7 +126,7 @@ figure.logo-header {
     bottom: 0;
     width: 2000px;
     left: 100%;
-    background: #cc0000;
+    background: #c00; /* longhand #cc0000 */
 }
 
 .ribbon::after {
@@ -151,7 +136,7 @@ figure.logo-header {
     bottom: 0;
     width: 2000px;
     right: 100%;
-    background: #cc0000;
+    background: #c00; /* longhand #cc0000 */
 }
 
 section {
@@ -279,14 +264,14 @@ ul {
 @media (min-width: 300px) and (max-width: 499px) {
     ul {
         width: 100%;
-        margin-bottom: 1em;
+        margin: 0 0 1em; /* longhand 0 0 1em 0 */
     }
 }
 
 @media (min-width: 500px) {
     ul {
         width: 80%;
-        margin-bottom: 0;
+        margin: 0;
     }
 }
 
@@ -346,8 +331,8 @@ h1 a {
 }
 
 .pipe {
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+    margin: 0 0.5em;
+    padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 600;
@@ -355,6 +340,8 @@ h1 a {
 }
 
 .header-text {
+    margin: 0;
+    padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 500;
