--- a/src/style.css
+++ b/src/style.css
@@ -359,17 +359,6 @@ h3 {
     margin-bottom: 0.5em;
 }
 
-h4 {
-    font-family: Roboto, serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    font-variation-settings: "wdth" 100;
-    font-size: var(--fs-1);
-    line-height: 1.5;
-    color: #1a1c1e;
-}
-
 li {
     font-family: Roboto, serif;
     font-optical-sizing: auto;
@@ -390,7 +379,7 @@ li {
     flex: initial;
 }
 
-dd {
+dt, dd {
     font-family: "Roboto Serif", serif;
     font-optical-sizing: auto;
     font-weight: 500;
@@ -399,7 +388,7 @@ dd {
         "wdth" 100,
         "GRAD" 0;
     font-size: var(--fs0);
-    line-height: 1.6;
+    line-height: 1.2;
     color: #1e1c00;
     margin-left: 0;
 }
