--- a/src/style.css
+++ b/src/style.css
@@ -360,12 +360,11 @@ h3 {
 }
 
 li {
-    font-family: "Roboto", serif;
+    font-family: Roboto, serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    font-weight: 500;
     font-style: normal;
-    font-variation-settings:
-        "wdth" 100;
+    font-variation-settings: "wdth" 100;
     font-size: var(--fs-1);
     line-height: 1.6;
     color: #fff;
@@ -381,23 +380,25 @@ li {
 }
 
 dt {
-    font-family: "Roboto", serif;
+    font-family: Roboto, serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-    font-variation-settings:
-        "wdth" 100;
+    font-variation-settings: "wdth" 100;
+    font-size: var(--fs-1);
+    line-height: 1.8;
     color: #1e1c00;
     margin-left: 0;
 }
 
 dd {
-    font-family: "Roboto", serif;
+    font-family: Roboto, serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-variation-settings:
-        "wdth" 100;
+    font-variation-settings: "wdth" 100;
+    font-size: var(--fs-1);
+    line-height: 1.4;
     color: #1e1c00;
-    margin-left: 0;
+    margin-left:0
 }
